--- a/main.html
+++ b/main.html
@@ -3,12 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="main.css">
 	<title>Document</title>
 </head>
 <body>
 	<div>我是句子1</div>
 	<div>我是句子2</div>
 	<table>
+	
 		<caption>隨堂</caption>
 		<tr>
 			<th>標題1</th>
@@ -20,7 +22,7 @@
 		</tr>
 		<tr>
 			<td><div>內容3</div></td>
-			<td><div id ="specialCase"></div>內容4</div>></td>
+			<td><div id ="specialCase">內容4</div>></td>
 		</tr>
 	</table>
 </body>
